--- a/index.html
+++ b/index.html
@@ -53,13 +53,17 @@
     .text-success {
       font-size: 1.5em;
     }
+
+    .container {
+      max-width: 600px;
+    }
   </style>
 </head>
 
-<body class="m-auto w-25 nf">
+<body class="m-auto nf">
   <div class="container nf-flat rounded shadow mt-5 p-4">
     <div class="row p-2">
-      <h1 class="text-center bg-dark text-white p-2">Calculatrice</h1>
+      <h1 class="text-center bg-dark text-white p-2 rounded">Calculatrice</h1>
     </div>
     <div class="row p-2">
       <form class="form-group p-0 my-4">
@@ -99,16 +103,7 @@
     </div>
   </div>
   <script src="./calculatrice.js"></script>
-  <!-- Optional JavaScript; choose one of the two! -->
-  <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+
 </body>
 
 </html>
