Correction marge haute

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 
 <body class="m-auto nf">
-  <div class="container nf-flat rounded shadow mt-5 p-4">
+  <div class="container nf-flat rounded shadow mt-md-5 p-4">
     <div class="row p-2">
       <h1 class="text-center bg-dark text-white p-2 rounded">Calculatrice</h1>
     </div>
